tests/spec/non_conformant/errors/invalid_parent/mixin_in_for.rs
//! Tests auto-converted from "sass-spec/spec/non_conformant/errors/invalid-parent/mixin-in-for.hrx"

// Ignoring "test", error tests are not supported yet.
